# match_maker

./: CMakeLists.txt  README.md
include/: match_info.h  match_maker_base.h  naive_ranked_match_maker.h  naive_set_match_maker.h
src/: match_maker_base.cpp  naive_ranked_match_maker.cpp  naive_set_match_maker.cpp
test/: CMakeLists.txt
test/group_test/: CMakeLists.txt  group_test.cpp
test/ranked_test/: CMakeLists.txt  ranked_test.cpp
